hphp/test/zend/good/ext/spl/tests/DirectoryIterator_getGroup_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (posix_geteuid() == 0) die('SKIP Cannot run test as root.');
}
