hphp/test/zend/bad/ext/session/tests/rfc1867_invalid_settings_2-win.php.skipif
<?php 
include('skipif.inc');
if(substr(PHP_OS, 0, 3) != "WIN")
        die("skip windows only test");
?>